--- a/public/gallery/stylesheets/bootstrap.css
+++ b/public/gallery/stylesheets/bootstrap.css
@@ -1,5 +1,5 @@
 html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}
-body{min-height:2000px;padding-top:70px;background:url(../img/squairy_light.png) repeat;}
+body{min-height:2000px;padding-top:70px;background:url(https://gallerie.blob.core.windows.net/packages/squairy_light.png) repeat;}
 article,
 aside,
 details,
