--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html ng-controller="ItemController as itemCtrl" ng-init="init()"> 
     <head> 	
-    	<link rel="stylesheet" type="text/css" href="https://gallerie.blob.core.windows.net/packages/bootstrap.css"/>
+    	<link rel="stylesheet" type="text/css" href="/gallery/stylesheets//bootstrap.css"/>
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> 
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">	
-		<script type="application/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script type="application/javascript" src="//code.angularjs.org/1.2.25/angular.js"></script>		
+		<script type="application/javascript" src="/gallery/javascripts/jquery-2.1.1.min.js"></script>
+		<script type="application/javascript" src="/gallery/javascripts/angular.js"></script>		
 		<style type="text/css">
 			h2{
 				margin: 0;     
