--- a/views/index.html
+++ b/views/index.html
@@ -7,15 +7,14 @@
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">	
 		<link rel="stylesheet" href="/gallery/stylesheets/mosaic.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="/gallery/stylesheets/fileinput.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="/gallery/stylesheets/jquery.bxslider.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="/gallery/stylesheets/bootstrap-multiselect.css" type="text/css" media="screen" />
+		
 		<script type="application/javascript" src="/gallery/javascripts/jquery-2.1.1.min.js"></script>
-		<script type="application/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script type="application/javascript" src="/gallery/javascripts/angular.js"></script>
-		<script type="application/javascript" src="/gallery/javascripts/mosaic.1.0.1.min.js"></script>
-		<script type="application/javascript" src="/gallery/javascripts/fileinput.js"></script>			
-		<script type="application/javascript" src="/gallery/javascripts/jquery.bxslider.min.js"></script>		
-		<script type="application/javascript" src="/gallery/javascripts/bootstrap-multiselect.js"></script>	
+		<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.2.js"></script>
+		<script type="application/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script type="application/javascript" src="/gallery/javascripts/fileinput.js"></script>		
+		
 		<style type="text/css">
 			h2{
 				margin: 0;     
@@ -40,7 +39,7 @@
 				.clearfix{ display: block; height: 0; clear: both; visibility: hidden; }
 						
 				.details{ margin:5px; }	
-					h4{ font:300 15px 'Helvetica', Helvetica, Arial, sans-serif; line-height:100%; letter-spacing:0.10em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
+					h4{ font:300 13px 'Helvetica', Helvetica, Arial, sans-serif; line-height:100%; letter-spacing:0.10em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
 					.details p{ font:300 12px 'Lucida Grande', Tahoma, Verdana, sans-serif; color:#aaa; text-shadow:1px 1px 0 rgb(0,0,0);}
 					.details a{ text-decoration:none; }
 		</style> 
@@ -57,9 +56,6 @@
 							<li><a href="#" ng-click="itemCtrl.setCategory('All'); containerCtrl.selectTab(0)">Home</a></li>
 							<li><a href="#mobileapps" ng-click="itemCtrl.setCategory('Mobile Apps'); containerCtrl.selectTab(0)">Mobile Apps</a></li>
 							<li><a href="#dashboards" ng-click="itemCtrl.setCategory('Dashboards'); containerCtrl.selectTab(0)">Dashboards</a></li>
-						<!-- 	<li ng-class="{active: panel.isSelected(3)}">
-								<a href="#workflows" ng-click="itemCtrl.setCategory('Workflows'); panel.selectTab(3); containerCtrl.selectTab(0)">Workflows</a>
-							</li> -->
 							<li><a href="#activities" ng-click="itemCtrl.setCategory('Activities'); containerCtrl.selectTab(0)">Activities</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
@@ -69,15 +65,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="navbar navbar-inverse navbar-top" ng-show="(category == 'Dashboards') || (category == 'Activities')">
+			<div class="navbar navbar-inverse navbar-top" ng-show="(((category == 'Dashboards') || (category == 'Activities')) && (containerCtrl.isSelected(0)))">
 		        <div class="container">
-		            <div class="navbar-header">
-		                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".main-nav">
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                    <span class="icon-bar"></span>
-		                </button>
-		            </div>
 		            <div class="collapse navbar-collapse main-nav">
 		                <ul class="nav navbar-nav">
 		                    <li><a href="#admin" ng-click="itemCtrl.setApp('admin')" ng-show="containerCtrl.isAppExist('admin')">Administration</a></li>
@@ -127,13 +116,18 @@
 								</p>
 							</div>
 						</div>	
-						<ul class="bxslider">
-							<li ng-repeat="cap in item.captures" slider>
-								<img data-ng-src='/gallery/img/{{cap.capture}}'/>
-							</li>
-						</ul>
+						<div  class="col-sm-6 col-md-6 col-md-offset-4 border-top-radius" style="height: 100%; width: 30%" ng-show="item.captures.length > 0">
+						    <carousel interval="myInterval">
+						      <slide ng-repeat="slide in slides" active="slide.active" ng-show="slide.itemName == name">
+						        <img ng-src="{{slide.image}}" style="margin:auto; width:100%; height:100%">
+						        <div class="carousel-caption">
+						          <h4>Slide {{$index}}</h4>
+						          <p>{{slide.text}}</p>
+						        </div>
+						      </slide>
+						    </carousel>
+						</div>
 					</div>
-						
 				</div>		
 				
 				<div class="row" ng-show="containerCtrl.isSelected(2)" ng-cloak>
@@ -214,6 +208,69 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- <div class="row" ng-shwo="containerCtrl.isSelected(4)" ng-cloak>
+					<div class="col-sm-12 col-md-8 col-md-offset-2 border-top-radius">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h3>Modifier une application</h3>	
+							</div>
+
+							<div class="panel-body">
+								<form name="modifyProductForm" method="POST" enctype="multipart/form-data" action="/gallery/modifyProduct" novalidate>
+									<fieldset>
+										<div class="form-group">
+											<label for="inputName">Nom</label>
+											<input type="text" class="form-control" name="inputName" id="inputName" placeholder="Nom" ng-minlength="3" required>
+										</div>
+										<div class="form-group">
+											<label for="inputDescription">Description</label>
+											<input type="textarea" class="form-control" name="inputDescription" id="inputDescription" placeholder="Description" required>
+										</div>
+										<div class="form-group">
+											<label for="inputCategory">Catégorie</label>	
+											<select ng-model="appDropDown" class="form-control" name="inputCategory" id="inputCategory">
+												<option value="Activities">Activities</option>	
+												<option value="Dashboards">Dashboards</option>
+												<option value="Mobile Apps">Mobile Apps</option>
+												<option value="Workflows">Workflows</option>
+											</select>
+										</div>
+										<div class="form-group"  ng-show="(appDropDown=='Activities')||(appDropDown=='Dashboards')">
+											<label for="inputSubCategory">Applications</label><br />
+											<p> Sélectionnez le/les application(s) correspondante(s)</p>
+											<select class="form-control" name="inputSelectApplication" id="inputSelectApplication" multiple="multiple" ng-required="(appDropDown=='Activities')||(appDropDown=='Dashboards')">
+												<option value="admin">Administration</option>
+							                    <option value="compta">Comptabilité</option>
+							                    <option value="demat">Dématérialisation</option>
+							                    <option value="ndf">Note de frais</option>
+							                    <option value="prop">Processus opérationnelles</option>
+							                    <option value="budget">Budget</option>
+							                    <option value="immo">Immobilisation</option>
+							                    <option value="rappro">Rapprochement bancaire</option>
+							                    <option value="treso">Trésorerie</option>
+							                    <option value="paiement">Moyens de paiements</option>
+							                    <option value="garantfi">Garanties financières</option>
+											</select>								
+										</div>
+										<div class="form-group">
+											<label for="inputImage">Icone</label>
+											<input type="file" accept=".jpg,.jpeg,.png" id="inputImage" name="inputImage" data-filename-placement="inside">
+										</div>
+										<div class="form-group">
+											<label for="inputPackage">Package</label>
+											<input type="file" accept=".zip,.mob" id="inputPackage" name="inputPackage" data-filename-placement="inside" required>
+										</div>
+										<div class="form-group">
+											<label for="inputCaptures">Images</label>
+											<input type="file" accept=".jpg,.jpeg,.png" id="inputCaptures" name="inputCaptures" data-filename-placement="inside" multiple>
+										</div>
+										<button type="submit" class="btn btn-primary">Envoyer</button>
+									</fieldset>
+								</form>
+							</div>
+						</div>	
+				</div> -->
 			</div>
 			<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
 				<div class="container">
@@ -234,7 +291,11 @@
 				
 				$(".thumbButton").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?' + $(this).attr("name") + '">Télécharger</a>')}); 	
 
-				$(".thumbButton2").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?' + $(this).attr("name") + '">Télécharger</a>')}); 	
+				$(".thumbButton2").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?' + $(this).attr("name") + '">Télécharger</a>')});
+
+				// $(".thumbButton").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?' + $(this).attr("name") + '">Télécharger</a><button style="margin-left:2px;" type="button" class="btn btn-default btn-xs" ng-click="containerCtrl.setItemModification(item.link)"><span class="glyphicon glyphicon-pencil"></span>Modifier</button>')}); 	
+
+				// $(".thumbButton2").each(function(){$(this).append('<a name="download" class="btn btn-xs btn-success" href="/gallery/product/download?' + $(this).attr("name") + '">Télécharger</a><button style="margin-left:2px;" type="button" class="btn btn-default btn-xs" ng-click="containerCtrl.setItemModification(item.link)"><span class="glyphicon glyphicon-pencil"></span>Modifier</button>')}); 	 
 			}	
 
 			$("#inputImage").fileinput({'showUpload':false, 'previewFileType':'any'});
@@ -253,130 +314,10 @@
 		            selectAllValue: 'select-all-value'
 		        });
 			});
-
-			(function(){
-				var app = angular.module('gallery',[]);
-
-				app.directive('slider', function(){
-					return function(scope, element, attr){
-						scope.$watch('$last', function(v){
-							if (v){
-								$('.bxslider').bxSlider({
-									auto : true,
-									mode: 'fade',
-									responsive : true,
-									slideWidth : 400
-								});
-							}
-						});
-					}
-				});
-
-				app.directive('bar2', function($timeout){
-					return{
-						restrict : 'A',
-						link : function(scope, element, attr){
-							$(element).mosaic({
-								animation:'slide' //fade or slide
-							});
-						}
-					}
-				});
-
-				app.controller('ContainerController', ['$scope', '$http', function($scope, $http){
-					this.tab = 0;	
-					$scope.resultInstall = "";
-					$scope.itemInstalled = "";	
-					
-					this.selectTab = function(setTab){
-						this.tab = setTab;
-					}
-					
-					this.isSelected = function(checkTab){
-						return this.tab == checkTab;
-					}
-
-					this.getInstall = function(name, category){
-						$scope.resultInstall = "";
-						$scope.itemInstalled = name;
-
-						$http.get('/gallery/product/install?name=' + name + '&category=' + category).
-						success(function(data, status, headers, config){
-							$scope.resultInstall = data.Reason;
-						}).
-						error(function(data){
-							$scope.resultInstall = "Installation échouée";
-							$scope.itemInstalled = name;
-						});
-					};
-
-					this.isAppExist = function(app){
-						var res = false;
-						angular.forEach($scope.items, function(key,value){
-							angular.forEach(key.application, function(appKey, appValue){
-								if(appKey === app)
-									res = true;
-							});
-						});
-						return res;
-					}
-				}]);
-				
-				app.controller('ItemController',['$scope', '$http', function($scope, $http){	
-					$scope.category = '';  
-					$scope.application = '';
-					$scope.name = '';
-					$scope.items = [];
-
-					this.init = function(){
-						$http.get('/gallery/getPackageJSON').success(function(data){
-						// $.get('/getPackageJSON', function(data){	
-							$scope.items = data;
-						});
-					};
-
-					this.init();
-						
-					this.setCategory = function(category){
-						$scope.application = '';
-						if(category == 'All'){
-							$scope.category = '';
-						}
-						else
-							$scope.category = category;
-					};
-
-					this.setApp = function(app){
-						$scope.application = app;
-					}
-
-					this.setItem = function(name){
-						$scope.name = name;
-					};
-
-					this.hideItem = function(item){
-						var res = true;
-
-						if (($scope.category == '') || (($scope.category != '') && (item.category == $scope.category))){
-							if(($scope.application != '') && ($scope.category == item.category) && (($scope.category == 'Dashboards') || ($scope.category == 'Activities'))){
-								if((item.category == $scope.category) && ($scope.application != '')){
-									angular.forEach(item.application, function(key, value){
-										if (key == $scope.application){
-											res = false;
-										}								
-									});
-								}
-							}
-							else
-								res = false;
-						}
-						return res;
-					};
-				}]);
-				angular.bootstrap(document,['gallery']);
-			})();
 		</script>		
-		
+		<script type="application/javascript" src="/gallery/javascripts/mosaic.1.0.1.min.js"></script>	
+		<script type="application/javascript" src="/gallery/javascripts/bootstrap-multiselect.js"></script>	
+		<script type="application/javascript" src="../controllers/app.js"></script>
 		<script type="application/javascript" src="/gallery/javascripts/bootstrap.file-input.js"></script>
     </body>
 </html>
